apollo-server-go/kustomization/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: apollo-server-go
  labels:
    istio-injection: enabled
    kubernetes.io/metadata.name: apollo-server-go
